@@ -1,6 +1,7 @@
 Changelog
 ---------
 2.0.4
+- ADDED: Player Animation Module
 - FIXED: RenderViewEntity issues
 
 2.0.3
